js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentFile/lib1/l1b.1.kt
fun foo1() = foo0_1() / 2
